syntax = "proto3";

package api.v1.capsule;

import "google/protobuf/timestamp.proto";

// Metrics for a container.
message ContainerMetrics {
  // Timestamp of the metrics.
  google.protobuf.Timestamp timestamp = 1;
  // Memory usage in bytes.
  uint64 memory_bytes = 2;
  // CPU usage in milliseconds.
  uint64 cpu_ms = 3;
  // Storage usage in bytes.
  uint64 storage_bytes = 4;
}

// Metrics for an instance
message InstanceMetrics {
  // Capsule of the instance.
  string capsule_id = 1;
  // Instance ID.
  string instance_id = 2;
  // Main container metrics.
  ContainerMetrics main_container = 3;
  // Proxy container metrics.
  ContainerMetrics proxy_container = 4;
}
